Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136176

[Reg 6.8.3 -> 6.9.0]QIcon::ThemeIcon::DialogInformation is missing pixels.

XMLWordPrintable

    • Windows
    • 4556caaa5 (dev), 047806922 (dev), 74823d6c4 (6.10), 673cd5a83 (6.10), 42ba243ec (6.9), cf0e3c6e5 (6.9)

      QIcon::ThemeIcon::DialogInformation is missing pixels on the left side.

      To reproduce the issue, run the attached example project.

        1. picture6.8.3.png
          picture6.8.3.png
          17 kB
        2. picture6.9.0.png
          picture6.9.0.png
          18 kB
        3. testicon.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            mahdi.belila Mehdi Belila
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: